--- a/package.json
+++ b/package.json
@@ -18,5 +18,20 @@
   "bugs": {
     "url": "https://github.com/Watchlist-App/Watchlist-nw/issues"
   },
-  "homepage": "https://github.com/Watchlist-App/Watchlist-nw"
+  "homepage": "https://github.com/Watchlist-App/Watchlist-nw",
+  "devDependencies": {
+    "coffee-script": "^1.7.1",
+    "gulp": "^3.6.1",
+    "gulp-coffee": "^1.4.2",
+    "gulp-concat": "^2.2.0",
+    "gulp-connect": "^2.0.5",
+    "gulp-imagemin": "^0.2.0",
+    "gulp-jade": "^0.5.0",
+    "gulp-stylus": "^0.2.1",
+    "gulp-uglify": "^0.2.1",
+    "jade": "^1.3.1",
+    "mocha": "^1.18.2",
+    "should": "^3.3.1",
+    "stylus": "^0.43.1"
+  }
 }
